syntax = "proto3";

package msg;

service BoxService {
    rpc Authenticate(AuthRequest) returns (AuthResponse) {}

    rpc GetVersion(None) returns (Version) {}

    rpc NewBox(Box) returns (Box) {}
    rpc SaveBox(Box) returns (Box) {}
    rpc GetBoxById(Box) returns (Box) {}
    rpc GetBoxes(None) returns (Boxes) {}
    
    rpc NewLink(Link) returns (Link) {}
    rpc SaveLink(Link) returns (Link) {}
    rpc GetLinkById(Link) returns (Link) {}
    rpc GetLinksByBoxId(Box) returns (Links) {}

    rpc SearchLinks(Search) returns (Links) {}
}

message AuthRequest {
    string username = 1;
    string password = 2;
}

message AuthResponse {
    int32 code = 1;
    string message = 2;
    Token token = 3;
}

message Token {
    string username = 1;
    string tokenHash = 2;
    int64 expirationTime = 3;
}

message Request {
    Token token = 1;
    oneof Objects {
        Box box = 2;
        Link link = 3;
    }
}

message Key {
    enum Type {
        BOX = 0;
        LINK = 1;
        NOTE = 2;
        NOTE_SECURE = 3;
    }
    Type type = 1;
    string id = 2;
    string boxId = 3;
}

message None {}

message Version {
    int32 major = 1;
    int32 minor = 2;
    int32 patch = 3;
}

message Search {
    string term = 1;
    int32 count = 2;
    int32 page = 3;
}

message Box {
    Key id = 1;
    string name = 2;
    string description = 3;
}

message Boxes {
    repeated Box boxes = 1;
}

message Link {
    Key id = 1;
    string name = 2;
    string url = 3;
    string description = 4;
    repeated string tags = 5;
    int64 createdOn = 6;
}

message Links {
    repeated Link links = 1;
}

message Note {
    Key id = 1;
    string title = 2;
    bytes text = 3;
    repeated string tags = 4;
    int64 createdOn = 5;
    int64 lastModified = 6;
}

message Notes {
    repeated Note notes = 1;
}